--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -48,6 +48,19 @@
             </div>
          </div>
       </header>
+      {% comment %} Hero Section {% endcomment %}
+      <div class="hero bg-base-200 h-80">
+         <div class="hero-content text-center">
+            <div class="max-w-md">
+               <h1 class="text-5xl font-bold">NDIOFOOR NEWS</h1>
+               <p class="py-6">
+                  Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem
+                  quasi. In deleniti eaque aut repudiandae et a id nisi.
+               </p>
+               <button class="btn btn-primary">Get Started</button>
+            </div>
+         </div>
+      </div>
       {% block content %}
       {% endblock content %}
    </body>
