--- a/post/templates/post/list_posts.html
+++ b/post/templates/post/list_posts.html
@@ -3,47 +3,10 @@
 {% block content %}
    {% comment %} Main Content Section {% endcomment %}
    <section class="flex flex-col lg:flex-row w-full gap-2 mx-auto lg:px-20 bg-base-100">
-      <main class="flex-2/3 container mx-auto p-4 bg-white">
-         <div class="flex items-center justify-between mb-4 bg-primary py-2 px-4 rounded ">
-            <h1 class="text-2xl font-bold italic  text-accent">A LA UNE</h1>
-            <span class="text-accent italic text-sm">Samedi 31 mai 2025</span>
-         </div>
-         <div class="flex flex-col md:flex-row gap-4 bg-base-100 shadow-xl p-4 border border-base-200">
-            <div class="flex-1/3 flex flex-col justify-between">
-               <div>
-                  <h1 class="text-2xl font-bold text-secondary mb-2">
-                     Wall Street warns Trump aides the GOP tax bill could jolt bond markets
-                  </h1>
-                  <p class="text-gray-600">
-                     Wall Street bankers and executives are privately warning the Trump administration that the tax bill moving through Congress could stoke...
-                  </p>
-               </div>
-               <a href="#" class="text-blue-500 italic hover:underline">Read more...</a>
-            </div>
-            <div class="w-full md:w-2/3 relative">
-               <img class="h-full object-cover"
-                    width="100%"
-                    height="100%"
-                    src="{% static "images/imrs.webp" %}"
-                    alt="">
-            </div>
-         </div>
-         {% comment %} <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-            {% for post in posts %}
-               <div class="card bg-base-100 shadow-xl">
-                  <figure>
-                     <img src="{{ post.image.url }}" alt="{{ post.title }}" class="w-full h-48 object-cover">
-                  </figure>
-                  <div class="card-body">
-                     <h2 class="card-title">{{ post.title }}</h2>
-                     <p>{{ post.content|truncatewords:20 }}</p>
-                  </div>
-               </div>
-            {% endfor %}
-         </div>
-         {% if not posts %}
-            <p class="text-center text-gray-500">No posts available.</p>
-         {% endif %} {% endcomment %}
+      <main class="flex-2/3 container mx-auto p-4 bg-white space-y-6">
+         {% include "components/post.html" %}
+         {% include "components/post.html" %}
+         {% include "components/post.html" %}
       </main>
       {% comment %} Sidebar Section {% endcomment %}
       <aside class="flex-1/3 container bg-white p-4 mx-auto">
